// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelTransferMessage renders component 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders component when message is sent by owner 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
             (You)
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                You
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={true}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders component with status failed 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock clickable-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pure(ErrorOutlineIcon)
              className="statusIcon-mock failed-mock"
            />
          </WithStyles(Grid)>
          <Elipsis
            classes={
              Object {
                "content": "failed-mock",
              }
            }
            content="Error -2: This is some kind of error message"
            interactive={true}
            length={60}
            tooltipPlacement="bottom"
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Elipsis
                classes={
                  Object {
                    "content": "failed-mock",
                  }
                }
                content="Error -2: This is some kind of error message"
                interactive={true}
                length={60}
                tooltipPlacement="bottom"
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="failed"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders correct time for different month 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              Feb 07, 13:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders correct time for different year 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              Mar 07, 2018, 13:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders correct time for same week 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              Wed, 13:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders username 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Saturn
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              11:03
            </WithStyles(Typography)>
            <pure(DoneAllIcon)
              className="statusIcon-mock broadcasted-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Saturn
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Link)
                className="link-mock"
                onClick={[Function]}
                variant="body1"
              >
                1
              </WithStyles(Link)>
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="broadcasted"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders with status cancelled 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock clickable-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pure(BlockIcon)
              className="statusIcon-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Elipsis
                classes={
                  Object {
                    "content": "failed-mock",
                  }
                }
                content="Cancelled"
                interactive={true}
                length={60}
                tooltipPlacement="bottom"
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="cancelled"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders with status pending 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pending
              className="statusIcon-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(SpinnerLoader))
                message="Loading Transaction Id"
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="pending"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;

exports[`ChannelTransferMessage renders with status success 1`] = `
<WithStyles(ListItem)
  alignItems="flex-start"
  className="wrapper-mock wrapperPending-mock"
  onClick={[Function]}
>
  <WithStyles(ListItemText)
    className="messageCard-mock"
    disableTypography={true}
    primary={
      <WithStyles(Grid)
        alignItems="flex-start"
        container={true}
        direction="row"
        justify="space-between"
      >
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Typography)
            className="username-mock"
            color="textPrimary"
          >
            Unnamed
          </WithStyles(Typography)>
          <WithStyles(Typography)
            variant="caption"
          >
            zbay.io/uri/zs1z7rejlpsa98s2rrrf
            ...
          </WithStyles(Typography)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
        >
          <WithStyles(Grid)
            alignItems="center"
            container={true}
            direction="row"
            justify="flex-end"
          >
            <WithStyles(Typography)
              variant="caption"
            >
              12:03
            </WithStyles(Typography)>
            <pure(DoneIcon)
              className="statusIcon-mock"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    }
    secondary={
      <React.Fragment>
        <WithStyles(Divider)
          className="divider-mock"
        />
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          direction="column"
          justify="space-evenly"
        >
          <WithStyles(Grid)
            alignItems="center"
            className="transactionCard-mock"
            container={true}
            direction="column"
            justify="space-evenly"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="display2"
              >
                $
                0.00
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(ZecBalance))
                value={"0"}
              />
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Send to :
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="title"
              >
                Unnamed
              </WithStyles(Typography)>
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <Memo(WithStyles(SpinnerLoader))
                message="Waiting for transaction to be mined 
    ID: 1"
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Divider)
            className="divider-mock"
          />
          <WithStyles(Grid)
            alignItems="center"
            className="info-mock"
            container={true}
            direction="row"
            justify="flex-start"
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <WithStyles(Typography)
                variant="Body 2"
              >
                This is some message 1
              </WithStyles(Typography)>
               
            </WithStyles(Grid)>
          </WithStyles(Grid)>
          <WithStyles(Collapse)
            in={true}
            timeout="auto"
          >
            <Memo(ChannelMessageActions)
              fromYou={false}
              onReply={[Function]}
              onResend={[Function]}
              status="success"
            />
          </WithStyles(Collapse)>
        </WithStyles(Grid)>
      </React.Fragment>
    }
  />
</WithStyles(ListItem)>
`;
